# mern-movie

./: .dockerignore  .env.example  .eslintignore  .eslintrc.js  .gitignore  Cargo.toml  Dockerfile.api  Dockerfile.client  LICENSE  README.md  atlas-search-query.txt  docker-compose.yml  index.config.json  mongo-index-def.json  nixpacks.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.github/workflows/: codeql.yml  test_build.yml
api-server/: .env.example  Cargo.toml
api-server/src/: cli.rs  error.rs  lib.rs  main.rs  routes.rs  state.rs  utils.rs
api-server/src/clients/: mod.rs  mongo.rs  r2.rs  tmdb.rs
api-server/src/data/: collection.rs  dto.rs  mod.rs  model.rs  reset.rs
api-server/src/middleware/: auth.rs  logger.rs  mod.rs  response_headers.rs  security_headers.rs
backend/: .gitignore  .prettierignore  .swcrc  package.json  tsconfig.json
backend/src/: server.ts  types.d.ts
backend/src/resources/: movie.model.ts  movie.service.ts
backend/src/utils/: connect.ts  zError.ts
client/: .eslintignore  .eslintrc.js  .prettierignore  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
client-app/: .editorconfig  .env.production  .eslintrc.js  .prettierignore  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client-app/public/: reset.json
client-app/src/: App.tsx  main.tsx  sw.ts  vite-env.d.ts
client-app/src/components/BackToTop/: index.tsx
client-app/src/components/Card/: index.tsx
client-app/src/components/Filter/: index.tsx
client-app/src/components/Image/: index.tsx
client-app/src/components/Modal/: index.tsx
client-app/src/components/NavSecondary/: index.tsx
client-app/src/components/SearchBar/: index.tsx
client-app/src/components/Select/: index.tsx
client-app/src/components/Svg/: SvgAlphaSortDown.tsx  SvgAlphaSortUp.tsx  SvgNumSortDown.tsx  SvgSearch.tsx
client-app/src/components/TextSkeleton/: index.tsx
client-app/src/components/Warning/: index.tsx
client-app/src/hooks/: useSearchParams.tsx  useStore.ts
client-app/src/lib/: api.ts  schema.ts  theme.ts  toaster.tsx  types.d.ts  utils.ts
client-app/src/routes/ErrorPage/: index.tsx
client-app/src/routes/FormPages/: AddPage.tsx  EditPage.tsx  FormSection.tsx  Input.tsx  InputArray.tsx  InputCheckbox.tsx  InputImage.tsx
client-app/src/routes/HomePage/: index.tsx
client-app/src/routes/MoviePage/: PageContent.tsx  PageHeader.tsx  PageIframe.tsx  index.tsx
client-app/src/scss/: _toaster.scss
client-server/: Cargo.toml
client-server/src/: cli.rs  main.rs  middleware.rs
client-server/src/middleware/: logger.rs  response_headers.rs
client/public/: file.json
client/src/: App.tsx  index.html  main.tsx  router.tsx  sw.ts  vite-env.d.ts
client/src/api/: api.ts  index.ts
client/src/components/BackToTop/: index.tsx
client/src/components/Button/: NavButton.module.css  NavButton.tsx
client/src/components/Card/: index.tsx
client/src/components/Cards/: Cards.tsx
client/src/components/Dropdown/: index.tsx
client/src/components/Filter/: index.tsx
client/src/components/FilterItem/: index.tsx
client/src/components/Form/: Form.module.css  Form.tsx  index.tsx
client/src/components/Image/: index.tsx
client/src/components/Loader/: index.tsx
client/src/components/Modal/: index.tsx
client/src/components/Nav/: Nav.tsx
client/src/components/Pill/: index.tsx
client/src/css/: main.css
client/src/hooks/: useDebounce.ts  useInitialLoad.tsx  useSearchParams.tsx  useStore.ts  useStore.tsx
client/src/interface/: Movie.ts  Movie.tsx  Store.ts
client/src/js/: App.jsx  main.jsx
client/src/layout/: Base.tsx  Layout.tsx  Nav.tsx  NavPrimiary.tsx  SvgSearch.tsx
client/src/lib/: Portal.tsx  api.ts  genres.ts  interface.ts  schema.ts  scroll-lock.ts  styles.ts  theme.ts  toaster.ts  types.d.ts  variants.ts
client/src/pages/: AllMovies.tsx  Home.tsx  _404Page.tsx
client/src/routes/: AddMovie.tsx  FormPage.tsx  Home.tsx  MoviePage.tsx  SingleMovie.tsx  _404Page.tsx
client/src/scss/: 404.scss  _filepond.scss  _scrollbar.scss  _toaster.scss  error.scss  main.scss
client/src/store/: useMovie.tsx  useStore.tsx
config/: default.ts
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  server.ts  sw.ts
frontend/src/lib/: schema.ts  toaster.tsx  types.d.ts  variants.ts
frontend/src/scss/: _filepond.scss  _no-script.scss  _placeholders.scss  _scrollbar.scss
server/: .gitignore  .swcrc  api-test.rest  atlas-search-test.mongodb  index.js  package.json  server.js  tsconfig.json
server/config/: default.ts
server/controller/: movie-controller.js  posts-controller.js  posts.js  user-controller.js
server/models/: movie-model.js  postMessage.js  user-model.js
server/routes/: external-route.js  movie-route.js  posts-route.js  posts.js  user-route.js
server/src/: index.ts  router.ts  server.ts  types.d.ts
server/src/controller/: movie.controller.ts
server/src/middleware/: validate.middleware.ts
server/src/models/: movie.model.ts
server/src/resources/: movie.controller.ts  movie.model.ts  movie.schema.ts  movie.service.ts  movie.validation.ts
server/src/router/: router.ts
server/src/schema/: movie.schema.ts
server/src/services/: movie.service.ts
server/src/utils/: connect.ts  error.ts  mdbApi.ts
src/: server.ts
src/resources/: movie.controller.ts  movie.schema.ts  movie.service.ts  movie.validation.ts
src/utils/: boolParser.ts  connect.ts  logger.ts  mdbApi.ts
(+65 files in other folders)
