[workspace]
resolver = "3"
members = ["api-server", "client-server"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
axum-client-ip = "1.1.3"
clap = "4.5.45"
log = "0.4.27"
mimalloc = "0.1.47"
tokio = "1.47.1"
tower = "0.5.2"
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.20"

[profile.release]
debug = false
lto = "fat"
codegen-units = 8
opt-level = 3
