[package]
name = "moviedb-client-server"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
log = { workspace = true }
mimalloc = { workspace = true, features = ["secure"] }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros"] }
tower = { workspace = true, features = ["limit", "timeout"] }
tower-http = { workspace = true, features = [
   "add-extension",
   "catch-panic",
   "cors",
   "fs",
   "limit",
   "trace",
] }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = [
   "env-filter",
   "time",
   "json",
] }
