[package]
name = "moviedb-client-server"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-client-ip = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
log = { workspace = true }
mimalloc = { workspace = true }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros"] }
tower = { workspace = true, features = ["timeout"] }
tower-http = { workspace = true, features = [
   "add-extension",
   "catch-panic",
   "cors",
   "decompression-full",
   "compression-full",
   "fs",
   "trace",
] }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = [
   "env-filter",
   "time",
   "json",
] }
